--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en, es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>base de TypeScript</title>
 </head>
-<script src="./objetos/union-type.js"></script>
+<script src="./ES6/clases-es6.js"></script>
 <body>
 </body>
 </html>
